<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="32sp"/>

    <EditText
        android:id="@+id/txtPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_below="@+id/txtTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:hint="@string/hint1"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtYears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_below="@+id/txtPayment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:hint="@string/hint2"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_below="@+id/txtYears"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:hint="@string/hint3"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnCompute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCompute"
        android:layout_below="@+id/txtPrincipal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:textSize="35sp"/>

    <ImageView
        android:id="@+id/imageMortgage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/mortgage"
        android:layout_below="@+id/btnCompute"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/imgDescription"
        android:layout_marginTop="5dp"/>
</RelativeLayout>